Add file logging with flexi_logger and replace prints with log macros.

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -19,6 +19,8 @@ libp2p = { workspace = true }
 state = { path = "../state" }
 wallet = { path = "../wallet" }
 tracing-subscriber = { workspace = true }
+log = { workspace = true }
+flexi_logger = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
