--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ clap = { version = "4.5.47", features = ["derive"] }
 libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "tokio", "tcp", "macros", "noise", "yamux", "quic", "request-response", "json", "ecdsa", "kad"] }
 rpassword = "7.4.0"
 tokio = { version = "1.47.1", features = ["full"] }
-futures = "0.3.31"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 tokio-cron-scheduler = "0.14.0"
 tempfile = "3.22.0"
+log = "0.4"
+flexi_logger = "0.31.4"
