--- a/wallet-cli/Cargo.toml
+++ b/wallet-cli/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = { workspace = true }
 libp2p = { workspace = true }
 rpassword = { workspace = true }
 tokio = { workspace = true }
+log = "0.4.28"
