--- a/wallet-cli/Cargo.toml
+++ b/wallet-cli/Cargo.toml
@@ -12,5 +12,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 libp2p = { workspace = true }
 rpassword = { workspace = true }
+p2p = { path = "../p2p" }
 tokio = { workspace = true }
 log = "0.4.28"
