--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -7,5 +7,5 @@ edition.workspace = true
 argon2 = { workspace = true }
 libsecp256k1 = { workspace = true }
 rand = { workspace = true }
-hex = { workspace = true }
+bs58 = { workspace = true }
 aes-gcm = { workspace = true }
