--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 
 [dependencies]
 argon2 = { workspace = true }
-libsecp256k1 = { workspace = true }
+libp2p = { workspace = true }
 rand = { workspace = true }
 bs58 = { workspace = true }
 aes-gcm = { workspace = true }
