--- a/state/Cargo.toml
+++ b/state/Cargo.toml
@@ -18,4 +18,5 @@ log = { workspace = true }
 futures = { workspace = true }
 
 [dev-dependencies]
-tempfile = { workspace = true }
+common = { path = "../common" }
+tokio = { workspace = true }
