Fixing transaction adding to state, test

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,3 +20,6 @@ log = { workspace = true }
 flexi_logger = { workspace = true }
 serde = { workspace = true }
 libp2p = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
