--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ argon2 = "0.5.3"
 bs58 = "0.5.1"
 aes-gcm = "0.10.3"
 rand = "0.8"
-libp2p = { version = "0.56.0", features = ["kad", "noise", "ecdsa", "yamux", "rendezvous", "identify", "ping", "gossipsub", "tcp", "tokio", "request-response", "json", "quic"] }
+libp2p = { version = "0.56.0", features = ["kad", "noise", "secp256k1", "yamux", "rendezvous", "identify", "ping", "gossipsub", "tcp", "tokio", "request-response", "json", "quic"] }
 serde = { version = "1.0.219", features = ["derive"] }
 futures = "0.3.31"
 serde_json = "1.0.143"
