--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace.package]
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+authors = ["Daniil Buravlev burravlev.d.a@gmail.com"]
 
 [workspace]
 resolver = "2"
